Use newer java apis for more readability